--- a/en/_layouts/website/layout.html
+++ b/en/_layouts/website/layout.html
@@ -2,10 +2,10 @@
 
 {% block style %}
 {{ super() }}
-<link rel="stylesheet" href="_assets/website/style.css">
+<link rel="stylesheet" href="../_assets/website/style.css">
 {% endblock %}
 
 {% block javascript %}
-<script src="_assets/website/script.js"></script>
+<script src="../_assets/website/script.js"></script>
 {{ super() }}
 {% endblock %}
