--- a/en/_layouts/website/page.html
+++ b/en/_layouts/website/page.html
@@ -1,7 +1,7 @@
 {% extends template.self %}
 
 {% block faq_header_brand %}
-WooCommerce POS
+WooCommerce POS FAQ
 {% endblock %}
 
 {% block faq_menu %}
