update main page url

--- a/en/_layouts/website/page.html
+++ b/en/_layouts/website/page.html
@@ -6,6 +6,6 @@ WooCommerce POS FAQ
 
 {% block faq_menu %}
 <ul class="nav navbar-nav navbar-right">
-  <li><a href="http://wcpos.com.au">Return to Main Site</a></li>
+  <li><a href="http://wcpos.com">Return to Main Site</a></li>
 </ul>
 {% endblock %}
