--- a/_layouts/website/languages.html
+++ b/_layouts/website/languages.html
@@ -31,7 +31,7 @@
 
       <div class="collapse navbar-collapse" id="navbar-menu">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="http://wcpos.com.au">Return to Main Site</a></li>
+          <li><a href="http://wcpos.com">Return to Main Site</a></li>
         </ul>
       </div>
     </div>
