update figure style

--- a/en/_layouts/website/layout.html
+++ b/en/_layouts/website/layout.html
@@ -2,7 +2,7 @@
 
 {% block style %}
 {{ super() }}
-<!-- <link rel="stylesheet" href="../_assets/website/style.css"> -->
+ <link rel="stylesheet" href="../_assets/website/style.css">
 {% endblock %}
 
 {% block javascript %}
