--- a/_layouts/website/languages.html
+++ b/_layouts/website/languages.html
@@ -49,30 +49,17 @@
         <h3 class="panel-title">Select a language</h3>
       </div>
       <div class="list-group">
-        <ul class="languages"></ul>
+        {%  for lang in languages.list %}
+        <a class="list-group-item" href="{{ (lang.id + "/README.md")|contentURL }}">{{ lang.title }}</a>
+        {% endfor %}
       </div>
     </div>
 
     <div class="faq-page-footer">
-      <a href="https://www.gitbook.com" target="_blank">{{ "GITBOOK_LINK"|t }}</a> ·
-      <span>Last edit {{ file.mtime|date('MMM Do YY') }}</span>
+      <span>Last edit {{ file.mtime|date('MMMM Do, YYYY') }}</span>
     </div>
   </div>
 
-  <script src="{{ 'gitbook.js'|resolveAsset }}"></script>
-  <script>
-    require(['gitbook', 'jQuery'], function (gitbook, $) {
-      $.getJSON('/gitbook/api/versions/branches', function (versions) {
-        var languages = {{ languages.list|dump|safe }};
-        var version = $.map(versions, function(o) { if(o["current"]) return o["name"]; }).shift();
-        var container = $('.list-group');
-
-        $.each(languages, function(index, lang){
-          container.append('<a class="list-group-item" href="/v/' + version + '/' + lang.id + '/">' + lang.title + '</a>');
-        });
-      });
-    });
-  </script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
